--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,12 +4,11 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.16.1 <3.0.0'
-
+  sdk: '>=2.18.6 <3.0.0'
 
 # dependencies:
 #   path: ^1.8.0
 
 dev_dependencies:
-  foo_lint: 
+  owlet_lints: 
     path: ../
