--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
-name: foo_lint
+name: owlet_lints
 description: Lint rules for my flutter project with multi rules for the different project types.
-version: 1.0.0+3
-repository: https://github.com/sonnts996/foo-lint
+version: 2.0.0
+repository: https://github.com/sonnts996/owlet-lints
 
 environment:
-  sdk: '>=2.16.1 <3.0.0'
+  sdk: '>=2.18.6 <3.0.0'
 
 dependencies: 
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
 
 dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.16.0
+  lints: ^2.0.1
+  test: ^1.24.2
