--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: owlet_lints
 description: Lint rules for my flutter project with multi rules for the different project types.
-version: 2.0.0
+version: 3.0.0
 repository: https://github.com/sonnts996/owlet-lints
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ^3.1.0
 
 dependencies: 
   flutter_lints: ^2.0.1
