--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 3.0.0
 repository: https://github.com/sonnts996/owlet-lints
 
 environment:
-  sdk: ^3.1.0
+  sdk: ^3.1.0+1
 
 dependencies: 
   flutter_lints: ^2.0.1
