--- a/lib/default_options.yaml
+++ b/lib/default_options.yaml
@@ -1,4 +1,4 @@
-include: package:lints/recommended.yaml
+include: package:flutter_lints/flutter.yaml
 
 analyzer:
   exclude:
@@ -7,62 +7,89 @@ analyzer:
  
 linter:
   rules:
+    - always_declare_return_types
+    - always_put_required_named_parameters_first
+    - avoid_annotating_with_dynamic
+    - avoid_bool_literals_in_conditional_expressions
+    - avoid_catching_errors
+    - avoid_double_and_int_checks
+    - avoid_dynamic_calls
+    - avoid_equals_and_hash_code_on_mutable_classes
+    - avoid_function_literals_in_foreach_calls
+    - avoid_positional_boolean_parameters
+    - avoid_private_typedef_functions
+    - avoid_returning_this
+    - avoid_setters_without_getters
+    - avoid_types_on_closure_parameters
+    - avoid_unused_constructor_parameters
+    - avoid_void_async
+    - cancel_subscriptions
+    - cast_nullable_to_non_nullable
+    - close_sinks
+    - combinators_ordering
+    - comment_references
+    - conditional_uri_does_not_exist
+    - deprecated_consistency
+    - deprecated_member_use_from_same_package
+    - diagnostic_describe_all_properties
+    - directives_ordering
+    - discarded_futures
+    - do_not_use_environment
+    - eol_at_end_of_file
+    - implicit_reopen
+    - invalid_case_patterns
+    - join_return_with_assignment
+    - leading_newlines_in_multiline_strings
+    - literal_only_boolean_expressions
+    - missing_whitespace_between_adjacent_strings
+    - no_adjacent_strings_in_list
+    - no_default_cases
+    - no_runtimeType_toString
+    - no_self_assignments
+    - no_wildcard_variable_uses
+    - noop_primitive_operations
+    - omit_local_variable_types
+    - prefer_constructors_over_static_methods
+    - prefer_expression_function_bodies
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    - prefer_foreach
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_int_literals
+    - prefer_mixin
+    - prefer_relative_imports
+    - prefer_single_quotes
+    - prefer_void_to_null
+    - require_trailing_commas
+    - sized_box_shrink_expand
     - sort_constructors_first
     - sort_unnamed_constructors_first
-    - camel_case_types
-    - camel_case_extensions
-    - library_names
-    - file_names
-    - library_prefixes
-    - non_constant_identifier_names
-    - constant_identifier_names
-    - directives_ordering
-    - curly_braces_in_flow_control_structures
-    - slash_for_doc_comments
-    - comment_references
-    - implementation_imports
-    - avoid_relative_lib_imports
-    - prefer_relative_imports
-    - avoid_init_to_null
-    - prefer_adjacent_string_concatenation
-    - prefer_interpolation_to_compose_strings
-    - unnecessary_brace_in_string_interps
-    - prefer_collection_literals
-    - prefer_is_empty
-    - prefer_is_not_empty
-    - avoid_function_literals_in_foreach_calls
-    - prefer_function_declarations_over_variables
+    - test_types_in_equals
+    - tighten_type_of_initializing_formals
+    - type_annotate_public_apis
+    - unawaited_futures
+    - unnecessary_await_in_return
+    - unnecessary_breaks
     - unnecessary_lambdas
-    - unnecessary_getters_setters
-    - prefer_expression_function_bodies
-    - unnecessary_this
-    - prefer_initializing_formals
-    - empty_constructor_bodies
-    - unnecessary_new
-    - unnecessary_const
-    - avoid_catching_errors
-    - use_rethrow_when_possible
-    - use_to_and_as_if_applicable
-    - prefer_mixin
-    - prefer_final_fields
+    - unnecessary_library_directive
+    - unnecessary_null_aware_operator_on_extension_on_nullable
+    - unnecessary_null_checks
+    - unnecessary_parenthesis
+    - unnecessary_raw_strings
+    - unnecessary_statements
+    - unreachable_from_main
+    - unsafe_html
+    - use_colored_box
+    - use_decorated_box
+    - use_if_null_to_convert_nulls_to_bools
+    - use_is_even_rather_than_modulo
+    - use_late_for_private_fields_and_variables
+    - use_named_constants
+    - use_raw_strings
     - use_setters_to_change_properties
-    - avoid_setters_without_getters
-    - avoid_returning_this
-    - prefer_typing_uninitialized_variables
-    - omit_local_variable_types
-    - avoid_types_on_closure_parameters
-    - type_init_formals
-    - avoid_return_types_on_setters
-    - prefer_generic_function_type_aliases
-    - avoid_private_typedef_functions
-    - use_function_type_syntax_for_parameters
-    - avoid_positional_boolean_parameters
-    - hash_and_equals
-    - avoid_equals_and_hash_code_on_mutable_classes
-    - avoid_null_checks_in_equality_operators
-    - avoid_print
-    - prefer_single_quotes
-
+    - use_string_buffers
+    - use_test_throws_matchers
+    - use_to_and_as_if_applicable
  
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
