--- a/lib/hard_options.yaml
+++ b/lib/hard_options.yaml
@@ -16,6 +16,9 @@ linter:
     - prefer_final_parameters
     - type_annotate_public_apis
     - sort_pub_dependencies
+    - diagnostic_describe_all_properties
+    - literal_only_boolean_expressions
+    - unawaited_futures
     - strong-mode:
         - implicit-casts
         - implicit-dynamic
