--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -11,7 +11,7 @@
 # (the recommended set includes the core lints).
 # The core lints are also what is used by pub.dev for scoring packages.
 
-include: package:owlet_lints/default_options.yaml
+include: package:owlet_lints/default.yaml
 
 # Uncomment the following section to specify additional rules.
 
